--- a/network/css/style.css
+++ b/network/css/style.css
@@ -1,6 +1,6 @@
 * {
-padding: 0px;
-margin: 0px;
+	padding: 0px;
+	margin: 0px;
 }
 
 .cf:before, .cf:after {
@@ -21,7 +21,7 @@ html,body {
 	height: 100%;
 	margin: 0px;
 	padding: 0px;
-	font-size: 12px;
+	font-size: 10px;
 	font-family: sans-serif;
 	line-height:1.25em;
 }
@@ -53,20 +53,20 @@ canvas#sigma_bg_1 {
 }
 
 #attributepane {
-   	display: block;	
+	display: block;
 	display: none;
-    position:absolute;
-    height:auto;
-    bottom:0;
-    top:0;
-    right:0;
+	position:absolute;
+	height:auto;
+	bottom:0;
+	top:0;
+	right:0;
 	width: 240px;
 	background-color: #fff;
 	margin: 0;
 	word-wrap: break-word;
 	background-color:rgba(255,255,255,0.8);
 	border-left: 1px solid #ccc;
-	padding: 0px 18px 0px 18px;	
+	padding: 0px 18px 0px 18px;
 	z-index: 1;
 }
 
@@ -112,19 +112,19 @@ canvas#sigma_bg_1 {
 }
 
 #attributepane .close em {
-background-image: url('../images/sprite.png');
-background-repeat: no-repeat;
-background-position: -11px -13px;
-display: block;
-width: 24px;
-height: 16px;
-float: left;
+	background-image: url('../images/sprite.png');
+	background-repeat: no-repeat;
+	background-position: -11px -13px;
+	display: block;
+	width: 24px;
+	height: 16px;
+	float: left;
 }
 
 #attributepane .close span {
-display: block;
-width: 151px;
-float: left;
+	display: block;
+	width: 151px;
+	float: left;
 }
 
 #attributepane .nodeattributes {
@@ -136,11 +136,11 @@ float: left;
 }
 
 #attributepane .name {
-font-size: 14px;
-cursor: default;
-padding-bottom: 10px;
-padding-top: 18px;
-font-weight:bold;
+	font-size: 14px;
+	cursor: default;
+	padding-bottom: 10px;
+	padding-top: 18px;
+	font-weight:bold;
 }
 
 #attributepane .data {
@@ -148,41 +148,41 @@ font-weight:bold;
 }
 
 #attributepane .data .plus {
-background-repeat: no-repeat;
-background-image: url('../images/sprite.png');
-background-position: -171px -122px;
-width: 22px;
-height: 20px;
-float: left;
-display: block;
+	background-repeat: no-repeat;
+	background-image: url('../images/sprite.png');
+	background-position: -171px -122px;
+	width: 22px;
+	height: 20px;
+	float: left;
+	display: block;
 }
 
 #attributepane .link {
-padding: 0 0 0 4px;
+	padding: 0 0 0 4px;
 }
 
 #attributepane .link li {
-padding-top: 2px;
-cursor:pointer;
+	padding-top: 2px;
+	cursor:pointer;
 }
 
 #attributepane .p {
-padding-top: 10px;
-font-weight: bold;
-font-size:14px;
+	padding-top: 10px;
+	font-weight: bold;
+	font-size:14px;
 }
 
 .left-close {
-background-image: url('../images/fancybox_sprite.png');
-margin-left:-37px;
-z-index:99999;
-cursor: pointer;
-padding-left:31px;
-line-height:36px;
-background-repeat: no-repeat;
-margin-bottom:25px;
-font-weight: bold;
-font-size:14px;
+	background-image: url('../images/fancybox_sprite.png');
+	margin-left:-37px;
+	z-index:99999;
+	cursor: pointer;
+	padding-left:31px;
+	line-height:36px;
+	background-repeat: no-repeat;
+	margin-bottom:25px;
+	font-weight: bold;
+	font-size:14px;
 
 }
 
@@ -194,11 +194,11 @@ font-size:14px;
 }
 
 #jisc {
-width: 71px;
-height: 56px;
-background-image: url('../images/jisc-logo-small.png');
-background-repeat: no-repeat;
-display:inline-block;
+	width: 71px;
+	height: 56px;
+	background-image: url('../images/jisc-logo-small.png');
+	background-repeat: no-repeat;
+	display:inline-block;
 }
 
 #jisc span {
@@ -206,12 +206,12 @@ display:inline-block;
 }
 
 #oii {
-width: 227px;
-height: 56px;
-background-image: url('../images/oii_text.png');
-background-repeat: no-repeat;
-display:inline-block;
-margin-right:10px;
+	width: 227px;
+	height: 56px;
+	background-image: url('../images/oii_text.png');
+	background-repeat: no-repeat;
+	display:inline-block;
+	margin-right:10px;
 
 }
 
@@ -220,44 +220,44 @@ margin-right:10px;
 }
 
 #maintitle {
-width: 100%;
-height: 72px;
-background-repeat: no-repeat;
-margin-bottom:20px;
+	width: 100%;
+	height: 72px;
+	background-repeat: no-repeat;
+	margin-bottom:20px;
 }
 
 #maintitle h1 {
-display: none;
+	display: none;
 }
 
 #mainpanel {
-margin-top: 50px;
-margin-left: 25px;
-background:#fff;
-background-color:rgba(255,255,255,0.8);
-border:1px solid #ccc;
-z-index:20;
-position:fixed;
-top:0;
+	margin-top: 15px;
+	margin-left: 10px;
+	background:#fff;
+	background-color:rgba(255,255,255,0.8);
+	border:1px solid #ccc;
+	z-index:20;
+	position:fixed;
+	top:0;
 }
 
 #mainpanel .b1 {
-padding: 0px 0 0 0;
+	padding: 0px 0 0 0;
 }
 
 #mainpanel .col {
-width: 240px;
-padding: 18px 18px 18px 18px;
-margin: 0;
+	width: 200px;
+	padding: 10px 5px 5px 10px;
+	margin: 0;
 
 }
 
 #title {
-font-weight: bold;
+	font-weight: bold;
 }
 
 #titletext {
-padding: 6px 0 10px 0;
+	padding: 6px 0 10px 0;
 }
 
 #info {
@@ -271,34 +271,34 @@ padding: 6px 0 10px 0;
 }
 
 #search input[name=search] {
-border: 1px solid #999;
-background-color: #fff;
-padding: 5px 7px 4px 7px;
-width: 205px;
-color: #000;
+	border: 1px solid #999;
+	background-color: #fff;
+	padding: 5px 7px 4px 7px;
+	width: 205px;
+	color: #000;
 }
 
 #search input.empty {
-color: #000;
+	color: #000;
 }
 
 #search .state {
-width: 14px;
-height: 14px;
-background-image: url('../images/sprite.png');
-float: right;
-margin-top: 6px;
-cursor: pointer;
-background-position: -131px -13px;
+	width: 14px;
+	height: 14px;
+	background-image: url('../images/sprite.png');
+	float: right;
+	margin-top: 6px;
+	cursor: pointer;
+	background-position: -131px -13px;
 }
 
 #search .state.searching {
-background-position: -11px -13px;
+	background-position: -11px -13px;
 }
 
 #search .results {
 	display: none;
-/*	border: 1px solid #999;*/
+	/*	border: 1px solid #999;*/
 	margin: 6px;
 	/*height: 150px;*/
 	overflow-y: scroll;
@@ -306,30 +306,30 @@ background-position: -11px -13px;
 }
 
 #search .results b {
-padding-left: 2px;
+	padding-left: 2px;
 }
 
 #search .results a {
-padding: 1px 2px;
-display: block;
-cursor: pointer;
-text-decoration: none;
-color: #000;
+	padding: 1px 2px;
+	display: block;
+	cursor: pointer;
+	text-decoration: none;
+	color: #000;
 }
 
 #search .results a:hover {
-background-color: #999;
-color: #fff;
+	background-color: #999;
+	color: #fff;
 }
 
 #attributeselect {
-margin: 20px 0 13px 0 ;
--webkit-touch-callout: none;
--webkit-user-select: none;
--khtml-user-select: none;
--moz-user-select: none;
--ms-user-select: none;
-user-select: none;
+	margin: 20px 0 13px 0 ;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 #attributeselect .select {
@@ -344,12 +344,12 @@ user-select: none;
 }
 
 #attributeselect .close {
-background-position: 200px -8px;
+	background-position: 200px -8px;
 }
 
 #attributeselect .list {
 	display: none;
-	border: 1px solid 
+	border: 1px solid
 	#999;
 	padding: 6px;
 	height: 150px;
@@ -364,23 +364,23 @@ background-position: 200px -8px;
 	margin-left: 240px;
 	margin-top:-164px;
 	color: white;
-}	
+}
 
 #attributeselect .list a {
-display:block;
-padding: 2px;
-text-decoration: none;
-color: #fff;
+	display:block;
+	padding: 2px;
+	text-decoration: none;
+	color: #fff;
 }
 
 #attributeselect .list a:hover {
-background-color: #fff;
-color: #000;
+	background-color: #fff;
+	color: #000;
 }
 
 .link h2 {
-font-size: 1em;
-padding-top: 1em;
+	font-size: 1em;
+	padding-top: 1em;
 }
 
 #mainpanel dl {
@@ -388,15 +388,15 @@ padding-top: 1em;
 }
 
 #mainpanel h2 {
-	font-size:14px;
+	font-size:10px;
 }
 
 #mainpanel dt {
-width: 20px;
-height: 20px;
-float: left;
-background-repeat: no-repeat;
-background-image: url('../images/sprite.png');
+	width: 20px;
+	height: 20px;
+	float: left;
+	background-repeat: no-repeat;
+	background-image: url('../images/sprite.png');
 }
 
 #legend dl {
@@ -407,48 +407,50 @@ background-image: url('../images/sprite.png');
 }
 
 #legend dd {
-margin-bottom: 8px;
-color: #000;
+	margin-bottom: 8px;
+	color: #000;
 }
 
 #mainpanel .infos dd {
-margin-bottom: 12px;
+	margin-bottom: 12px;
 }
 
 #mainpanel .node {
-background-position: -11px -119px;
+	background-position: -11px -119px;
 }
 
 #mainpanel .edge {
-background-position: -51px -122px;
+	background-position: -51px -122px;
 }
 
 #mainpanel .colours {
 
-background-image:url('../images/rainbow.png');
+	background-image:url('../images/rainbow.png');
 
 }
 #legend .note {
-margin-bottom: 8px;
+	margin-bottom: 8px;
 
 }
 
 #mainpanel .regions {
-background-position: -171px -13px;
+	background-position: -171px -13px;
 }
 
 #mainpanel .download {
-background-position: -51px -13px;
+	background-position: -51px -13px;
 }
 
 #mainpanel .moreinformation {
-background: url('../images/info.png');
-background-repeat: no-repeat;
-margin-left: 5px;
+	background: url('../images/info.png');
+	background-repeat: no-repeat;
+	margin-left: 5px;
+	background-size: 5px 10px;
+
 }
 
 #copyright {
-	margin:0 auto;	
+	margin:0 auto;
 	position: fixed;
 	right: 40px;
 	bottom: 25px;
@@ -456,11 +458,11 @@ margin-left: 5px;
 }
 
 #copyright a {
-color: #000;
+	color: #000;
 }
 
 #copyright .explanation {
-display: none;
+	display: none;
 }
 
 #zoom {
@@ -482,8 +484,8 @@ display: none;
 #zoom .z {
 	background:#fff;
 	background-color:rgba(255,255,255,0.7);
-	width: 60px;
-	height: 60px;
+	width: 25px;
+	height: 25px;
 	cursor: pointer;
 	border:1px solid #ccc;
 	float:left;
@@ -494,20 +496,23 @@ display: none;
 #zoom .z[rel=center] {
 	background-image: url('../images/zoom_reset.png');
 	background-position:center;
+	background-size: 20px 20px;
 }
 
 #zoom .z[rel=in] {
 	background-image: url('../images/zoom_in.png');
-	background-position:center; 
+	background-position:center;
+	background-size: 20px 20px;
 }
 
 #zoom .z[rel=out] {
 	background-image: url('../images/zoom_out.png');
-	background-position:center; 
+	background-position:center;
+	background-size: 20px 20px;
 }
 
 .line {
-	font-size: 12px;
+	font-size: 10px;
 	color: #000;
 	text-decoration: none;
 	font-weight: bold;
@@ -516,62 +521,62 @@ display: none;
 }
 
 #information {
-display: none;
-background: #fff;
-padding: 1px 10px 10px 10px;
+	display: none;
+	background: #fff;
+	padding: 1px 10px 10px 10px;
 }
 
 #information h3 {
-margin: 14px 0 4px 0;
+	margin: 14px 0 4px 0;
 }
 
 #information p {
-margin: 0 0 4px 0;
+	margin: 0 0 4px 0;
 }
 
 #information .button {
-width: 14px;
-height: 14px;
-background-image: url('../images/sprite.png');
-border: 1px solid #999;
-display: inline-block;
-*display: inline;
-*zoom: 1;
+	width: 14px;
+	height: 14px;
+	background-image: url('../images/sprite.png');
+	border: 1px solid #999;
+	display: inline-block;
+	*display: inline;
+	*zoom: 1;
 }
 
 #information .button span {
-display: none;
+	display: none;
 }
 
 #information .button.plus {
-background-position: -91px -122px; 
+	background-position: -91px -122px;
 }
 
 #information .button.moins {
-background-position: -131px -122px;
+	background-position: -131px -122px;
 }
 
 #minify {
-background-color: #fff;
-padding: 4px 4px 4px 25px;
-cursor: pointer;
-background-image: url('../images/sprite.png');
-background-repeat: no-repeat;
-background-position: -167px -118px;
-position: absolute;
-top: 65px;
-left: 15px;
-display: none;
+	background-color: #fff;
+	padding: 4px 4px 4px 25px;
+	cursor: pointer;
+	background-image: url('../images/sprite.png');
+	background-repeat: no-repeat;
+	background-position: -167px -118px;
+	position: absolute;
+	top: 65px;
+	left: 15px;
+	display: none;
 }
 
 #minifier {
-position: absolute;
-width: 20px;
-height: 16px;
-background-image: url('../images/sprite.png');
-background-repeat: no-repeat;
-background-position: -45px -147px;
-cursor: pointer;
-display: none;
+	position: absolute;
+	width: 20px;
+	height: 16px;
+	background-image: url('../images/sprite.png');
+	background-repeat: no-repeat;
+	background-position: -45px -147px;
+	cursor: pointer;
+	display: none;
 }
 
